--- a/index.html
+++ b/index.html
@@ -60,12 +60,17 @@
 
       <div class="form-group">
         <label for="gender" class="form-label">Giới tính</label>
-        <div>
+
+        <div class="form-group-gender">
           <input name="gender" type="radio" value="male" class="form-control">
-          Nam</div>
-        <div>
+          <div class="gender-label">Nam</div>
+        </div>
+
+        <div class="form-group-gender">
           <input name="gender" type="radio" value="female" class="form-control">
-          Nữ</div>
+          <div class="gender-label">Nữ</div>
+        </div>
+
         <span class="form-message"></span>
       </div>
 
